--- a/autoclik_spinner_lucky_draw_odometer0.5.2.html
+++ b/autoclik_spinner_lucky_draw_odometer0.5.2.html
@@ -962,8 +962,8 @@
 
         // --- DATA STRUCTURE (UPDATED FOR NEW PRIZES & PRICES) ---
         const defaultPrizes = [
-            { name: "iPhone 17 / 256GB", value: "มูลค่ารางวัลละ 29,900 บาท", total: 1, current: 1 },
-            { name: "iPad Gen11 ความจุ 128 GB / WIFI", value: "มูลค่ารางวัลละ 12,900 บาท", total: 2, current: 2 },
+            { name: "iPhone 17", value: "มูลค่ารางวัลละ 29,900 บาท", total: 1, current: 1 },
+            { name: "iPad 128 GB / WIFI", value: "มูลค่ารางวัลละ 12,900 บาท", total: 2, current: 2 },
             { name: "Xiaomi Robot Vacuum E5", value: "มูลค่ารางวัลละ 3,990 บาท", total: 2, current: 2 },
             { name: "Xiaomi Smart Air Purifier 4 Compact", value: "มูลค่ารางวัลละ 2,790 บาท", total: 4, current: 4 },
             { name: "Xiaomi Redmi Watch 5 Lite", value: "มูลค่ารางวัลละ 1,990 บาท", total: 6, current: 6 },
@@ -1236,8 +1236,8 @@
 
         function getPrizeImage(prizeName) {
             const prizeMappings = {
-                "iPhone 17 / 256GB": "iPhone_17.png",
-                "iPad Gen11 ความจุ 128 GB / WIFI": "iPad_128_GB_WIFI.png",
+                "iPhone 17": "iPhone_17.png",
+                "iPad 128 GB / WIFI": "iPad_128_GB_WIFI.png",
                 "Xiaomi Robot Vacuum E5": "Xiaomi_Robot_Vacuum_E5.png",
                 "Xiaomi Smart Air Purifier 4 Compact": "Xiaomi_Smart_Air_Purifier_4_Compact.png",
                 "Xiaomi Redmi Watch 5 Lite": "Redmi watch 5 lite.png",
@@ -1975,7 +1975,7 @@
             const dLine1 = document.getElementById('display-name-line1');
 
             // TIER 1 (iPhone)
-            if (prizeName.includes("iPhone 17 / 256GB")) {
+            if (prizeName.includes("iPhone")) {
                 document.body.classList.add('shake-active'); 
                 setTimeout(() => document.body.classList.remove('shake-active'), 5000); 
                 document.getElementById('supernova').classList.add('supernova-active');
@@ -2006,7 +2006,7 @@
                 activeEffects.intervals.push(fireInt);
             }
             // TIER 2: SILVER THEME
-            else if (prizeName.includes("iPad Gen11 ความจุ 128 GB / WIFI") || prizeName.includes("รางวัลพิเศษ")) {
+            else if (prizeName.includes("iPad") || prizeName.includes("รางวัลพิเศษ")) {
                 const isGold = true; 
                 document.getElementById('supernova').classList.add('supernova-active');
                 document.getElementById('supernova').classList.add('silver');
@@ -2172,8 +2172,8 @@
             triggerAdvancedEffects(currentPrize.name);
             
             let winSoundSrc = "sound_win.mp3"; 
-            if (currentPrize.name.includes("iPhone 17 / 256GB")) winSoundSrc = "win1.mp3";
-            else if (currentPrize.name.includes("iPad Gen11 ความจุ 128 GB / WIFI") || currentPrize.name.includes("Vacuum")) winSoundSrc = "win2.mp3";
+            if (currentPrize.name.includes("iPhone")) winSoundSrc = "win1.mp3";
+            else if (currentPrize.name.includes("iPad") || currentPrize.name.includes("Vacuum")) winSoundSrc = "win2.mp3";
             else if (currentPrize.name.includes("Purifier") || currentPrize.name.includes("Watch")) winSoundSrc = "win3.mp3";
 
             sndWin.src = winSoundSrc;
@@ -2291,6 +2291,4 @@
         }
     </script>
 </body>
-
 </html>
-
