--- a/autoclik_spinner_lucky_draw_odometer0.5.2.html
+++ b/autoclik_spinner_lucky_draw_odometer0.5.2.html
@@ -962,9 +962,9 @@
 
         // --- DATA STRUCTURE (UPDATED FOR NEW PRIZES & PRICES) ---
         const defaultPrizes = [
-            { name: "iPhone 17 / 256GB", value: "มูลค่ารางวัลละ 29,900 บาท", total: 1, current: 1 },
-            { name: "iPad Gen11 / 128 GB / WIFI", value: "มูลค่ารางวัลละ 12,900 บาท", total: 2, current: 2 },
-            { name: "Xiaomi Robot Vacuum S40C", value: "มูลค่ารางวัลละ 4,990 บาท", total: 2, current: 2 },
+            { name: "iPhone 17", value: "มูลค่ารางวัลละ 29,900 บาท", total: 1, current: 1 },
+            { name: "iPad 128 GB / WIFI", value: "มูลค่ารางวัลละ 12,900 บาท", total: 2, current: 2 },
+            { name: "Xiaomi Robot Vacuum E5", value: "มูลค่ารางวัลละ 3,990 บาท", total: 2, current: 2 },
             { name: "Xiaomi Smart Air Purifier 4 Compact", value: "มูลค่ารางวัลละ 2,790 บาท", total: 4, current: 4 },
             { name: "Xiaomi Redmi Watch 5 Lite", value: "มูลค่ารางวัลละ 1,990 บาท", total: 6, current: 6 },
             { name: "บัตรโลตัส 500 บาท", value: "มูลค่ารางวัลละ 500 บาท", total: 15, current: 15 },
@@ -1236,9 +1236,9 @@
 
         function getPrizeImage(prizeName) {
             const prizeMappings = {
-                "iPhone 17 / 256GB": "iPhone_17.png",
-                "iPad Gen11 / 128 GB / WIFI": "iPad_128_GB_WIFI.png",
-                "Xiaomi Robot Vacuum S40C": "Xiaomi Robot Vacuum S40C.png",
+                "iPhone 17": "iPhone_17.png",
+                "iPad 128 GB / WIFI": "iPad_128_GB_WIFI.png",
+                "Xiaomi Robot Vacuum E5": "Xiaomi_Robot_Vacuum_E5.png",
                 "Xiaomi Smart Air Purifier 4 Compact": "Xiaomi_Smart_Air_Purifier_4_Compact.png",
                 "Xiaomi Redmi Watch 5 Lite": "Redmi watch 5 lite.png",
                 "บัตรโลตัส 500 บาท": "บัตรโลตัส_500_บาท.png",
@@ -2292,4 +2292,3 @@
     </script>
 </body>
 </html>
-
